<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_homescreen">TIC TAC TOE</string>
    <string name="reset">Reset</string>
    <string name="vibrate">Vibrate</string>
    <string name="ttt_settings">Settings</string>
    <string name="ttt_settings_vibrate_summary">Vibrate on move</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about">http://github.com/ujayant</string>
    <string name="ok">OK</string>
</resources>
